<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.asu.bsse.ajbowen1.thetravelinstash.YarnDisplayActivity">

    <TextView
        android:id="@+id/yarn_quantView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:text="@string/quant"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="204dp" />

    <TextView
        android:id="@+id/yarn_colorView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:text="@string/c"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/yarn_quantView" />

    <TextView
        android:id="@+id/yarn_typeView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:text="@string/ft"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/yarn_colorView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/yarn_manufView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="167dp"
        android:text="@string/manuf"
        app:layout_constraintBottom_toTopOf="@+id/yarn_nameView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yarn_nameView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/yarn_weightView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/yarn_weightView"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:text="@string/w"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/yarn_typeView" />

    <Button
        android:id="@+id/mainB"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorAccent"
        android:onClick="mainClicked"
        android:text="@string/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        app:layout_constraintLeft_toRightOf="@+id/button"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/info"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/yarn_manufView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.511"
        tools:layout_editor_absoluteX="15dp" />

    <Button
        android:id="@+id/modifyB"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:onClick="modClicked"
        android:text="@string/modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/button"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:onClick="remClicked"
        android:text="@string/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/modifyB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

</android.support.constraint.ConstraintLayout>
